--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "antd": "^3.26.7",
+    "axios": "^0.19.2",
     "immer": "^5.3.2",
     "next": "^9.2.1",
     "next-redux-saga": "^4.1.2",
