--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "mysql2": "^2.1.0",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1"
   },
