--- a/back/package.json
+++ b/back/package.json
@@ -9,12 +9,20 @@
   "author": "ss",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "helmet": "^3.21.2",
+    "hpp": "^0.2.3",
     "morgan": "^1.9.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1"
   },
