--- a/front/package.json
+++ b/front/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "dev": "nodemon"
   },
   "author": "ss",
   "license": "ISC",
@@ -16,9 +14,18 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@next/bundle-analyzer": "^9.2.1",
     "antd": "^3.26.7",
     "axios": "^0.19.2",
+    "compression-webpack-plugin": "^3.1.0",
+    "cookie-parser": "^1.4.4",
+    "cross-env": "^7.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "immer": "^5.3.2",
+    "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "next": "^9.2.1",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^4.0.1",
