--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,7 @@
     "helmet": "^3.21.2",
     "hpp": "^0.2.3",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
