--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "react-helmet": "^5.2.1",
     "react-hook-form": "^4.8.0",
     "react-redux": "^7.1.3",
+    "react-tagsinput": "^3.19.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.0"
