--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@next/bundle-analyzer": "^9.2.1",
+    "@zeit/next-css": "^1.0.1",
     "antd": "^3.26.7",
     "axios": "^0.19.2",
     "compression-webpack-plugin": "^3.1.0",
@@ -35,6 +36,7 @@
     "react-helmet": "^5.2.1",
     "react-hook-form": "^4.8.0",
     "react-redux": "^7.1.3",
+    "react-slick": "^0.25.2",
     "react-tagsinput": "^3.19.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
