--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "node server.js"
   },
   "author": "ss",
   "license": "ISC",
@@ -27,7 +27,7 @@
     "immer": "^5.3.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "next": "^9.2.1",
+    "next": "^9.2.2",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^4.0.1",
     "prop-types": "^15.7.2",
@@ -40,7 +40,8 @@
     "react-tagsinput": "^3.19.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "video-react": "^0.14.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.10.7",
