--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^7.1.3",
     "react-slick": "^0.25.2",
     "react-tagsinput": "^3.19.0",
+    "react-video-thumbnail": "^0.1.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.0",
