--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "author": "ss",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.638.0",
     "axios": "^0.19.2",
     "bcrypt": "^3.0.7",
     "cookie-parser": "^1.4.4",
@@ -22,6 +23,7 @@
     "hpp": "^0.2.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
