--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "greenlock-express": "^2.7.18",
     "immer": "^5.3.2",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
