--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "greenlock-express": "^2.7.18",
     "helmet": "^3.21.2",
     "hpp": "^0.2.3",
     "morgan": "^1.9.1",
@@ -27,6 +28,7 @@
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "redirect-https": "^1.3.0",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1"
   },
